bugs on smaller devices fixed

--- a/css/game.css
+++ b/css/game.css
@@ -22,7 +22,7 @@ canvas {
   font-size: 1.5rem;
   letter-spacing: .25rem;
   text-transform: uppercase;
-  background-color: #0c0c0c;
+  background-color: #313030;
   border: none;
   border-radius: .25rem;
   color: #fff;
